SystemUI: fix volume add button,volume sub button and screenshot button is not displayed in some dpi
Signed-off-by: alex.lin <alex.lin@rock-chips.com>
Change-Id: Iac8004d4ce2f1d38096efc2bb380b024014cba28

--- a/packages/SystemUI/res/values-sw720dp/config.xml
+++ b/packages/SystemUI/res/values-sw720dp/config.xml
@@ -25,5 +25,8 @@
     <!-- The maximum count of notifications on Keyguard. The rest will be collapsed in an overflow
          card. -->
     <integer name="keyguard_max_notification_count">5</integer>
+
+    <!-- Nav bar button default ordering/layout -->
+    <string name="config_navBarLayout" translatable="false">left;volume_sub,back,home,recent,volume_add,screenshot;right</string>
 </resources>
 
