Eink: add app bleach function
Signed-off-by: wh <wanghang@rock-chips.com>
Change-Id: Ib765014001bf59596bbf252c163810e8fb375b13
Signed-off-by: Joe Maples <joe@maples.dev>

--- a/packages/SystemUI/res/layout/eink_menu_dialog.xml
+++ b/packages/SystemUI/res/layout/eink_menu_dialog.xml
@@ -53,12 +53,13 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="1dp"
         android:id="@+id/eink_dialog_animation_layout"
         android:layout_below="@+id/eink_dialog_dpi_layout"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="0dp"
+        android:visibility="invisible">
         <TextView
             android:background="#ffffff"
             android:id="@+id/eink_dialog_animation_text"
