--- a/packages/SystemUI/res/values-sw372dp/config.xml
+++ b/packages/SystemUI/res/values-sw372dp/config.xml
@@ -21,5 +21,5 @@
      for different hardware and product builds. -->
 <resources>
     <!-- Nav bar button default ordering/layout -->
-    <string name="config_navBarLayout" translatable="false">left[.25W],back[.5WC];home;recent[.5WC],eink_menu,right[.25W]</string>
+    <string name="config_navBarLayout" translatable="false">left[.25W],back[.5WC];home;recent[.25WC],refresh[.25W],switch_mode[.25W],eink_menu[.25W],right[.25W]</string>
 </resources>
