--- a/packages/SystemUI/res/values-sw720dp/config.xml
+++ b/packages/SystemUI/res/values-sw720dp/config.xml
@@ -27,6 +27,6 @@
     <integer name="keyguard_max_notification_count">5</integer>
 
     <!-- Nav bar button default ordering/layout -->
-    <string name="config_navBarLayout" translatable="false">left;volume_sub,back,home,recent,volume_add,eink_menu,screenshot;right</string>
+    <string name="config_navBarLayout" translatable="false">left;volume_sub,back,home,recent,volume_add,refresh,switch_mode,eink_menu,screenshot;right</string>
 </resources>
 
