Add the checkbox of contrast to control whether the contrast can be modified.
Signed-off-by: president.chao <president.chao@rock-chips.com>
Change-Id: Idae1ef04f6c38f74499153d668c8fe34ed4567b4
Signed-off-by: Joe Maples <joe@maples.dev>

--- a/packages/SystemUI/res/layout/eink_menu_dialog.xml
+++ b/packages/SystemUI/res/layout/eink_menu_dialog.xml
@@ -48,8 +48,8 @@
             android:layout_height="wrap_content"
             android:maxHeight="2dp"
             android:max="240"
-            android:layout_marginLeft="30dp"
-            android:layout_toRightOf="@id/eink_dialog_dpi_edit"/>
+            android:layout_marginRight="30dp"
+            android:layout_alignParentRight="true"/>
         <CheckBox
             android:id="@+id/eink_dialog_dpi_checkbox"
             android:layout_width="30dp"
@@ -125,7 +125,13 @@
             android:layout_height="wrap_content"
             android:maxHeight="2dp"
             android:max="80"
+            android:layout_marginRight="30dp"
             android:layout_alignParentRight="true" />
+        <CheckBox
+            android:id="@+id/eink_dialog_contrast_checkbox"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
     <RelativeLayout
